archive/archivecommon.css
.vod-container div iframe {
    width: 40vw;
    height: 22.5vw;
}

.vod-container div {
    height: min-content;
}

.vod-container {
    text-align: center;
    display: grid;
    grid-auto-columns: 1fr;
    grid-auto-flow: row;
    justify-content: center;
    align-content: center;
    justify-items: center;
    align-items: center;
    font-size: 0;
}

table td, table th {
    font-family: "Omnes Medium";
    line-height: 1.4;
    padding: 10px 10px;
    text-align: center;
    font-size: 1.5vw;
}

table {
    margin: auto auto;
    width: 80%;
}

#title-box {
    width: 100%;
    background-size: cover;
}

.title-box-content {  
    display: grid;
    grid-template-columns: 4fr 1fr;
    grid-template-rows: repeat(2, 1fr);
    grid-auto-columns: 1fr;
    gap: 0px 0px;
    grid-auto-flow: row;
    justify-content: center;
    align-content: center;
    justify-items: center;
    align-items: center;
    grid-template-areas:
      "Title Title"
      "Charity Quantity";

    width: 70%;
    margin: auto auto;
    padding: 2vw;
    text-align: center;
  }
  
.Title { 
    grid-area: Title; 
    font-family: "Omnes Black";
    font-size: 6vw;
    color:white
}

a {
    color:white
}

.Charity, .Quantity {
    font-family: "Omnes Black";
    font-size: 3vw;
    color: white;
}
  
.Charity { grid-area: Charity; }
  
.Quantity { grid-area: Quantity; }

.subtext {
    color: white;
    background-color: black;
}

.subtext p {
    font-size: 1.5vw;
    padding: 2vw;
    padding-left: 8vw;
    padding-right: 8vw;
    padding-bottom: 4vw;
}

@media screen and (max-width: 1100px) {

    .title-box-content {
        width: 90%;
    }

    .subtext p {
        font-size: 2.5vw;
    }

    table {
        width: 95%;
    }

    table td, table th {
        font-size: 2vw;
    }

    .vod-container div iframe {
        width: 80vw;
        height: 45vw;
    }

    .vod-container {
        grid-template-columns: 1fr;
    }

    .vod-container h1 {
        font-size: 7vw;
    }
}

